add more about EB1, MSP2

--- a/Projeto_de_Inovacao_IMPULSO/impulso_5.ipynb
+++ b/Projeto_de_Inovacao_IMPULSO/impulso_5.ipynb
@@ -15,16 +15,16 @@
    "source": [
     "Criando um pitch de sucesso:\n",
     "\n",
-    "- Introdução: Quem somos? O que fazemos?\n",
-    "- Problema: Apresentar o problema de forma clara (alto tempo de logistica despende de muitos recursos), arquitetura dos espaços de armazenamento (ela é otimizada?).\n",
-    "- Tamanho de mercado: Os possíveis clientes para a solução deste problema, seriam médias e grandes empresas com CD, supermercados atacadistas e/ou que trabalham com grande fluxo de mercádorias. (apresentar dados) (magazine luiza)\n",
-    "- Solução: A solução deste problema envolve a analise e desenvolvimento computacional de soluções logisticas de grande eficiência, ou seja, otimização computacional seguida de sua aplicação real. (algoritmos genéticos)\n",
-    "- Modelo de negócio: Vendendo a licensa do software (vitálicio, atualização até 1 ano), pagamento de mensalidade (atualização frequente), pagamento por número de execuções.\n",
-    "- Análise da Concorrência: VitalsisWMS, eles atualmente operando utilizando algoritmos genéticos, porem o algoritmo deles entrega apenas o próximo ponto mais próximo. (Concorrência direta)\n",
-    "- Linha do tempo: Idealização da solução (agência UFTM de inovação) -> parceria com a Stanley Black & Decker -> Maturação da ideia -> continuing...\n",
-    "- Time: Paulo: Estruturas de dados, programação, lógica, criatividade, reinforcement learning, problemas de otimização. Isaac: programação, criatividade, lógica, algoritmos genéticos, problemas benchmark, problemas de logistica. Cruvinel: Hackthons, venda de tecnologias, idealização de produtos, conhecimento sobre tecnologias, experiência com empresas e programação.\n",
-    "- Investimento: A princípio nada, porem para escalar a solução será necessário investimento em infraestrutura. (hardware, servidores e mão de obra especializada)\n",
-    "- Fechamento: Investimento a partir do momento que a solução estiver pronta, network para vender a solução, recursos de infraestrutura e mão de obra."
+    "- **Introdução**: Quem somos? O que fazemos?\n",
+    "- **Problema**: Apresentar o problema de forma clara (alto tempo de logistica despende de muitos recursos), arquitetura dos espaços de armazenamento (ela é otimizada?).\n",
+    "- **Tamanho de mercado**: Os possíveis clientes para a solução deste problema, seriam médias e grandes empresas com CD, supermercados atacadistas e/ou que trabalham com grande fluxo de mercádorias. (apresentar dados) (magazine luiza)\n",
+    "- **Solução**: A solução deste problema envolve a analise e desenvolvimento computacional de soluções logisticas de grande eficiência, ou seja, otimização computacional seguida de sua aplicação real. (algoritmos genéticos)\n",
+    "- **Modelo de negócio**: Vendendo a licensa do software (vitálicio, atualização até 1 ano), pagamento de mensalidade (atualização frequente), pagamento por número de execuções.\n",
+    "- **Análise da Concorrência**: VitalsisWMS, eles atualmente operando utilizando algoritmos genéticos, porem o algoritmo deles entrega apenas o próximo ponto mais próximo. (Concorrência direta)\n",
+    "- **Linha do tempo**: Idealização da solução (agência UFTM de inovação) -> parceria com a Stanley Black & Decker -> Maturação da ideia -> continuing...\n",
+    "- **Time**: Paulo: Estruturas de dados, programação, lógica, criatividade, reinforcement learning, problemas de otimização. Isaac: programação, criatividade, lógica, algoritmos genéticos, problemas benchmark, problemas de logistica. Cruvinel: Hackthons, venda de tecnologias, idealização de produtos, conhecimento sobre tecnologias, experiência com empresas e programação.\n",
+    "- **Investimento**: A princípio nada, porem para escalar a solução será necessário investimento em infraestrutura. (hardware, servidores e mão de obra especializada)\n",
+    "- **Fechamento**: Investimento a partir do momento que a solução estiver pronta, network para vender a solução, recursos de infraestrutura e mão de obra."
    ]
   },
   {
