--- a/Operacoes_unitarias_3/Escoamento_em_leito_poroso.ipynb
+++ b/Operacoes_unitarias_3/Escoamento_em_leito_poroso.ipynb
@@ -174,7 +174,7 @@
    "id": "8c6a4491-e1d2-4b2c-b76e-b5ee3ef627d0",
    "metadata": {},
    "source": [
-    "A **força resistiva**, também conhecida como força de resistência ou força de arrasto, é uma força que age contra o movimento de um objeto atravessando um meio fluido, como o ar ou a água. Além disso, ela pode ser causada pelo movimento do fluido atravessando um objeto fixo.\n",
+    "<div>A **força resistiva**, também conhecida como força de resistência ou força de arrasto, é uma força que age contra o movimento de um objeto atravessando um meio fluido, como o ar ou a água. Além disso, ela pode ser causada pelo movimento do fluido atravessando um objeto fixo.</div\n",
     "\n",
     "A força resistiva para o movimento do fluido através de uma matriz porosa é representada por:\n",
     "\n",
@@ -184,7 +184,8 @@
     "\n",
     "- **K**: Permeabilidade do meio poroso\n",
     "- **c**: Parâmetro adimensional que depende da matriz porosa\n",
-    "- $R_e$: Reynolds para escoamento poroso</div>\n",
+    "- $R_e$: Reynolds para escoamento poroso\n",
+    "\n",
     "\n",
     "Ademais, para escoamentos lentos, onde $R_e$ << 1, temos que a equação se simplifica e encontramos a **lei de darcy**:\n",
     "\n",
