feat:[Eng] CP, FT3, MSP2, OP3

--- a/Operacoes_unitarias_3/Leito_fluidizado.ipynb
+++ b/Operacoes_unitarias_3/Leito_fluidizado.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "2b2628d0-4268-4e1d-a4ab-fb163951d901",
    "metadata": {
     "tags": []
@@ -384,7 +384,8 @@
     "                         Dc = 30,\n",
     "                         Hml = 50,\n",
     "                         M = 39000)\n",
-    "leito.condicao_minima_de_fluidizacao()"
+    "leito.condicao_minima_de_fluidizacao()\n",
+    "\n"
    ]
   },
   {
