update Termo e PPCQ

--- a/PPCQ/resumo.ipynb
+++ b/PPCQ/resumo.ipynb
@@ -164,7 +164,7 @@
     "\n",
     "- **Arranjo funcional**: Também conhecido como layout por processo, neste arranjo, recursos similares ou que realizam funções semelhantes são agrupados juntos. Por exemplo, todas as furadeiras estarão em uma área, todas as fresadoras em outra, e assim por diates.\n",
     "\n",
-    "- **Arranjo celular**: Este tipo de arranjo é um híbrido entre o arranjo funcional e o arranjo por produto. As máquinas são organizadas em \"células\" cada uma das quais é dedicada à produção de um tipo específico de produto ou parte, facilitando o fluxo de materiais e reduzindo o tempo de prepaerado.\n",
+    "- **Arranjo celular**: Este tipo de arranjo é um híbrido entre o arranjo funcional e o arranjo por produto. As máquinas são organizadas em \"células\" cada uma das quais é dedicada à produção de um tipo específico de produto ou parte, facilitando o fluxo de materiais e reduzindo o tempo de preparação.\n",
     "\n",
     "- **Arranjo por produto**: Também conhecido como layout em linha ou layout de produto, este tipo é usado para a produção em massa de um único produto ou produtos muito similares. As máquinas e equipamentos são dispostos em sequência, de modo que o produto se move linearmente de uma estação de trabalho para a próxima, com cada estação realizando uma etapa específica do processo de pp"
    ]
@@ -271,7 +271,7 @@
     "\n",
     "- **Demanda:** Sempre o maior valor entre Demanda preista e Pedidos em carteira\n",
     "- **Tipo de produção:** Acompanha a demanda ou Nivelamento ($Produção = \\frac { \\sum Demanda + Estoque \\ minimo - Estoque \\ inicial}{Tempo \\ total}$)\n",
-    "- **Lote minimo**\n",
+    "- **Tamanho do lote:** Lote minimo ou Lote economico (Caso seja lote minimo você pode solicitar valores 1 pouco acima dele, já o lote economico você deve solicitar apenas multiplos.\n",
     "- **Estoque de segurança**\n",
     "- **Tempo de produção**\n",
     "- **Exemplo:**\n",
@@ -279,14 +279,6 @@
     "![image.png](attachment:52e6234e-7d23-4ee5-b0e0-9615479544d6.png)\n",
     "\n",
     "Determinado o MPS é definido quais os materiais que são necessarios para a fabricação do produto, feito isso é realizado novamente o MPS para cada 1 deles e chamamos eles de MRP."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0bf87f18-6d20-4761-8c84-cea5e226fa31",
-   "metadata": {},
-   "source": [
-    "dados."
    ]
   },
   {
